--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: 'Pricedown';
+  src: url('/public/pricedown.otf') format('truetype');
+}
+
+html, body{
+  width: 100%;
+  height: 100%;
+  font-family: 'Pricedown', sans-serif;
+}
